--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.19.0",
     "formik": "^2.2.6",
+    "node-sass": "^5.0.0",
     "rc-slider": "^9.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
