--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "date-fns": "^2.19.0",
     "formik": "^2.2.6",
     "node-sass": "^5.0.0",
