--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^5.0.0",
     "rc-slider": "^9.7.1",
     "react": "^17.0.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
