--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,13 +11,13 @@ pool:
 name: $(BuildID)-$(Build.SourceBranchName)
 
 variables:
-  ${{ if notIn(variables['Build.SourceBranchName'], 'master') }}:
+  ${{ if notIn(variables['Build.SourceBranchName'], 'master', 'azure-pipelines') }}:
     buildImage: false
     deployService: false
     deployEnvironment: 'no'
     imageTags: 'no'
     serviceName: 'no'
-  ${{ if eq(variables['Build.SourceBranchName'], 'master') }}:
+  ${{ if eq(variables['Build.SourceBranchName'], 'master', 'azure-pipelines') }}:
     buildImage: true
     deployService: true
     deployEnvironment: production
